fix alignments in contact page (#9)

--- a/src/app/PAGES/contact/contact.component.scss
+++ b/src/app/PAGES/contact/contact.component.scss
@@ -9,6 +9,7 @@
   align-items: center;
   justify-content: center;
   padding: 75px 0;
+
   .profile-img {
     width: 300px;
     height: 300px;
@@ -26,7 +27,6 @@
   .info {
     display: flex;
     align-items: center;
-    width: 250px;
     margin: 10px 0;
 
     .icon {
